# covid-delta-usa

./: .gitmodules  readme.md
data/: .gitignore  compare_binaries.py  distribution_estimator.py  fetch_data.py  find_contact_prob.py  parameters_delta_vs_alpha.py  parameters_incubation_infection.py  requirements.txt  scratch.py  settings.json  settings.py  simulate.py  simulate_contact_prob.py  simulate_vaccine_efficacies.py  states.py
data/history/: __init__.py  estimates.py  states.py  vaccine.py  variants.py
data/sim/: __init__.py  dynamics.py  program_input.py  simulator.py  world_defaults.py
simulator/: .gitignore  CMakeLists.txt  main.cpp  reference.cpp
simulator/sim/: contact_prob.cpp  contact_prob.hpp  covid.cpp  covid.hpp  data.cpp  data.hpp  person.hpp  probabilities.cpp  probabilities.hpp  reference_simulators.cpp  reference_simulators.hpp  simulators.cpp  simulators.hpp  timer.hpp  variant_probabilities.cpp  variant_probabilities.hpp
simulator/sim/population/: person.cpp  person.hpp  population.cpp  population.hpp
simulator/tests/: population_tests.cpp
